# intent2action

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: image_cases.yaml  text_cases.yaml
configs/: default.yaml
configs/examples/: lmstudio.yaml  ollama.yaml  openai.yaml  text_only.yaml  vllm.yaml
examples/expected_outputs/: dashboard_issue.json
examples/text_inputs/: customer_email.txt  dashboard_issue.txt  meeting_notes.txt  requirement.txt
intent2action/: __init__.py  cli.py
intent2action/agent_adk/: __init__.py  agent.py  agent_card.json
intent2action/app/: config.py  main.py
intent2action/core/: __init__.py  action_generator.py  action_ranker.py  entity_extractor.py  image_parser.py  input_classifier.py  intent_detector.py  missing_input_detector.py  output_validator.py  pipeline.py  risk_scorer.py  text_parser.py
intent2action/prompts/: action_generation.md  entity_extraction.md  intent_detection.md  risk_scoring.md  system_prompt.md
intent2action/providers/: __init__.py  factory.py  lmstudio_client.py  openai_compatible_client.py
intent2action/registry/: action_ontology.yaml  (+2 more)
scripts/: __init__.py  benchmark.py
tests/: test_adk_agent_tools.py  test_api.py  test_cli.py  test_config.py  test_image_utils.py  test_json_utils.py  test_lmstudio_client.py  test_missing_input_detector.py  test_openai_compatible_client.py  test_pipeline_text.py  test_provider_factory.py  test_risk_scorer.py  test_schemas.py
(+10 files in other folders)
