[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent2action"
version = "1.0.0"
description = "Multimodal action inference framework for OpenAI-compatible model endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "intent2action contributors" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "streamlit>=1.32.0",
  "pillow>=10.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.5.0"]

[project.scripts]
intent2action = "intent2action.cli:main"
intent2action-benchmark = "scripts.benchmark:main"

[tool.setuptools.packages.find]
include = ["intent2action*", "scripts"]

[tool.setuptools.package-data]
intent2action = ["prompts/*.md", "registry/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
